# truck-rs

./: Cargo.toml  LICENSE  Readme.md  optimizations.md
src/: config.rs  main.rs
