[package]
name = "truck-rs"
version = "0.1.0"
edition = "2021"
description = "Supercharges cargo"
authors = ["Useless-rs <https://github.com/useless-rs>"]
license = "MIT"
readme = "Readme.md"
repository = "https://github.com/useless-rs/truck"
keywords = ["rust", "build", "tool"]
categories = ["build", "rust-build-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
anyhow = "1.0.57"
serde = {version = "1.0", features = ["derive"]}

[[bin]]
name = "truck"
path = "src/main.rs"
